--- a/src/components/keyboard.css
+++ b/src/components/keyboard.css
@@ -1,5 +1,15 @@
 /* ---- Keyboard Components ---- */
 
+@font-face {
+  font-family: 'Trickster';
+  src: local('Trickster'), url('trickster-COLRv1.otf') format('opentype') tech(color-COLRv1),
+    url('trickster-outline.otf') format('opentype'), url('trickster-outline.woff') format('woff');
+}
+
+:root {
+  --var1: red;
+}
+
 .kbd {
   display: inline-flex;
   align-items: center;
